# swap-agrregrator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  ROADMAP.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  drips_adapter.py  signal_adapter.py  soroban_adapter.py
agents/: __init__.py  decision_agent.py  prediction_agent.py
api/: __init__.py  admin.py
config/: __init__.py  paths.py  settings.py
core/: __init__.py  alerting.py  graph.py  kill_switch.py  kill_switch_redis.py  observability.py  orchestrator.py  risk_limits.py  state.py
db/: __init__.py  models.py  persist.py  session.py
db/migrations/: env.py  script.py.mako
deploy/: README.md
deploy/k8s/: configmap.yaml  deployment-admin-api.yaml  deployment-orchestrator.yaml  deployment-worker.yaml  namespace.yaml  secret.yaml.example
docs/: README.md  activity-log.md
docs/adapters/: drips-adapter.md  signal-adapter.md  soroban-adapter.md
docs/agents/: min-confidence-gate.md  prediction-and-decision.md  rebalance-delta-sizing.md  risk-scoring-heuristic.md
docs/api/: admin-api.md
docs/architecture/: langgraph-checkpointing.md  langgraph-pipeline.md  overview.md  phase1-vs-phase2-graphs.md
docs/configuration/: env-vars.md  tracked-paths.md
docs/core/: enforce-limits-node.md  kill-switch.md  orchestrator-timeout-degradation.md  path-failure-isolation.md  risk-limits.md  state-models.md  (+1 more)
scripts/: run_once.py  run_orchestrator.py
tests/: __init__.py
workers/: __init__.py  celery_app.py  tasks.py
(+30 files in other folders)
