[project]
name = "stellarhydra"
version = "0.1.0"
description = "StellarHydra: Agentic Liquidity Balancer for Stellar DEX routing"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<0.3",
    "langchain-core>=0.3,<0.4",
    "celery>=5.4,<6",
    "redis>=5.0,<6",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<1",
    "stellar-sdk>=11.0,<12",
    "alembic>=1.13,<2",
    "langgraph-checkpoint-postgres>=1.0,<2",
    "prometheus-client>=0.20,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
